--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,6 @@ jobs:
       - run: npm ci
       - run: |
           npm version ${{ github.event.release.tag_name }} --no-git-tag-version --allow-same-version && \
-          npm publish
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
